--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "local": "nodemon -r dotenv/config app.js",
+    "local": "node -r dotenv/config app.js",
     "start": "node app.js"
   },
   "keywords": [],
